[package]
name = "ckb-std"
version = "0.4.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jjyr/ckb-std"
description = "This library contains serveral modules help you write CKB contract with Rust"
exclude = ["docs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[build-dependencies]
cc = "1.0"

[dependencies]
